# TZPasswordManager

./: README.md  apply.sh
OP-TEE Rpi 4b/: Makefile  Readme.md  config.txt  optee-fix.dtbo
app/: Android.mk  CMakeLists.txt
app/host/: Makefile  main.c  password_manager.h  tee.c  ui.c  utils.c
app/host/include/: password_manager.h
app/ta/: Android.mk  Makefile  password_manager_ta.c  sub.mk  user_ta_header_defines.h
app/ta/include/: password_manager_ta.h  ta_header.h
progress/: README.md  week3.pptx  week4.pptx
